--- a/index.html
+++ b/index.html
@@ -5,26 +5,26 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>EstateAgency Bootstrap Template - Index</title>
+  <title>HomeLand</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="img/favicon.png" rel="icon">
+  <link href="img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
-  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="assets/vendor/ionicons/css/ionicons.min.css" rel="stylesheet">
-  <link href="assets/vendor/animate.css/animate.min.css" rel="stylesheet">
-  <link href="assets/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet">
-  <link href="assets/vendor/owl.carousel/assets/owl.carousel.min.css" rel="stylesheet">
+  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="vendor/ionicons/css/ionicons.min.css" rel="stylesheet">
+  <link href="vendor/animate.css/animate.min.css" rel="stylesheet">
+  <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+  <link href="vendor/owl.carousel/owl.carousel.min.css" rel="stylesheet">
 
   <!-- Template Main CSS File -->
-  <link href="assets/css/style.css" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet">
 
   <!-- =======================================================
   * Template Name: EstateAgency - v2.2.1
@@ -133,13 +133,15 @@
   <!-- ======= Header/Navbar ======= -->
   <nav class="navbar navbar-default navbar-trans navbar-expand-lg fixed-top">
     <div class="container">
-      <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarDefault" aria-controls="navbarDefault" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarDefault"
+        aria-controls="navbarDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span></span>
         <span></span>
         <span></span>
       </button>
-      <a class="navbar-brand text-brand" href="index.html">Estate<span class="color-b">Agency</span></a>
-      <button type="button" class="btn btn-link nav-search navbar-toggle-box-collapse d-md-none" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-expanded="false">
+      <a class="navbar-brand text-brand" href="index.html">Home<span class="color-b">Land</span></a>
+      <button type="button" class="btn btn-link nav-search navbar-toggle-box-collapse d-md-none" data-toggle="collapse"
+        data-target="#navbarTogglerDemo01" aria-expanded="false">
         <span class="fa fa-search" aria-hidden="true"></span>
       </button>
       <div class="navbar-collapse collapse justify-content-center" id="navbarDefault">
@@ -157,7 +159,8 @@
             <a class="nav-link" href="blog-grid.html">Blog</a>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+              aria-haspopup="true" aria-expanded="false">
               Pages
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -172,16 +175,17 @@
           </li>
         </ul>
       </div>
-      <button type="button" class="btn btn-b-n navbar-toggle-box-collapse d-none d-md-block" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-expanded="false">
+      <button type="button" class="btn btn-b-n navbar-toggle-box-collapse d-none d-md-block" data-toggle="collapse"
+        data-target="#navbarTogglerDemo01" aria-expanded="false">
         <span class="fa fa-search" aria-hidden="true"></span>
       </button>
     </div>
   </nav><!-- End Header/Navbar -->
 
   <!-- ======= Intro Section ======= -->
-  <div class="intro intro-carousel">
+  <!-- <div class="intro intro-carousel">
     <div id="carousel" class="owl-carousel owl-theme">
-      <div class="carousel-item-a intro-item bg-image" style="background-image: url(assets/img/slide-1.jpg)">
+      <div class="carousel-item-a intro-item bg-image" style="background-image: url(img/slide-1.jpg)">
         <div class="overlay overlay-a"></div>
         <div class="intro-content display-table">
           <div class="table-cell">
@@ -206,7 +210,7 @@
           </div>
         </div>
       </div>
-      <div class="carousel-item-a intro-item bg-image" style="background-image: url(assets/img/slide-2.jpg)">
+      <div class="carousel-item-a intro-item bg-image" style="background-image: url(img/slide-2.jpg)">
         <div class="overlay overlay-a"></div>
         <div class="intro-content display-table">
           <div class="table-cell">
@@ -231,7 +235,7 @@
           </div>
         </div>
       </div>
-      <div class="carousel-item-a intro-item bg-image" style="background-image: url(assets/img/slide-3.jpg)">
+      <div class="carousel-item-a intro-item bg-image" style="background-image: url(img/slide-3.jpg)">
         <div class="overlay overlay-a"></div>
         <div class="intro-content display-table">
           <div class="table-cell">
@@ -257,12 +261,12 @@
         </div>
       </div>
     </div>
-  </div><!-- End Intro Section -->
+  </div>End Intro Section -->
 
-  <main id="main">
+  <!-- <main id="main"> -->
 
-    <!-- ======= Services Section ======= -->
-    <section class="section-services section-t8">
+
+  <!-- <section class="section-services section-t8">
       <div class="container">
         <div class="row">
           <div class="col-md-12">
@@ -348,10 +352,10 @@
           </div>
         </div>
       </div>
-    </section><!-- End Services Section -->
+    </section> -->
 
-    <!-- ======= Latest Properties Section ======= -->
-    <section class="section-property section-t8">
+  <!-- ======= Latest Properties Section ======= -->
+  <!-- <section class="section-property section-t8">
       <div class="container">
         <div class="row">
           <div class="col-md-12">
@@ -371,7 +375,7 @@
           <div class="carousel-item-b">
             <div class="card-box-a card-shadow">
               <div class="img-box-a">
-                <img src="assets/img/property-6.jpg" alt="" class="img-a img-fluid">
+                <img src="img/property-6.jpg" alt="" class="img-a img-fluid">
               </div>
               <div class="card-overlay">
                 <div class="card-overlay-a-content">
@@ -418,7 +422,7 @@
           <div class="carousel-item-b">
             <div class="card-box-a card-shadow">
               <div class="img-box-a">
-                <img src="assets/img/property-3.jpg" alt="" class="img-a img-fluid">
+                <img src="img/property-3.jpg" alt="" class="img-a img-fluid">
               </div>
               <div class="card-overlay">
                 <div class="card-overlay-a-content">
@@ -465,7 +469,7 @@
           <div class="carousel-item-b">
             <div class="card-box-a card-shadow">
               <div class="img-box-a">
-                <img src="assets/img/property-7.jpg" alt="" class="img-a img-fluid">
+                <img src="img/property-7.jpg" alt="" class="img-a img-fluid">
               </div>
               <div class="card-overlay">
                 <div class="card-overlay-a-content">
@@ -512,7 +516,7 @@
           <div class="carousel-item-b">
             <div class="card-box-a card-shadow">
               <div class="img-box-a">
-                <img src="assets/img/property-10.jpg" alt="" class="img-a img-fluid">
+                <img src="img/property-10.jpg" alt="" class="img-a img-fluid">
               </div>
               <div class="card-overlay">
                 <div class="card-overlay-a-content">
@@ -558,10 +562,10 @@
           </div>
         </div>
       </div>
-    </section><!-- End Latest Properties Section -->
+    </section> -->
 
-    <!-- ======= Agents Section ======= -->
-    <section class="section-agents section-t8">
+  <!-- ======= Agents Section ======= -->
+  <!-- <section class="section-agents section-t8">
       <div class="container">
         <div class="row">
           <div class="col-md-12">
@@ -581,7 +585,7 @@
           <div class="col-md-4">
             <div class="card-box-d">
               <div class="card-img-d">
-                <img src="assets/img/agent-4.jpg" alt="" class="img-d img-fluid">
+                <img src="img/agent-4.jpg" alt="" class="img-d img-fluid">
               </div>
               <div class="card-overlay card-overlay-hover">
                 <div class="card-header-d">
@@ -642,7 +646,7 @@
           <div class="col-md-4">
             <div class="card-box-d">
               <div class="card-img-d">
-                <img src="assets/img/agent-1.jpg" alt="" class="img-d img-fluid">
+                <img src="img/agent-1.jpg" alt="" class="img-d img-fluid">
               </div>
               <div class="card-overlay card-overlay-hover">
                 <div class="card-header-d">
@@ -703,7 +707,7 @@
           <div class="col-md-4">
             <div class="card-box-d">
               <div class="card-img-d">
-                <img src="assets/img/agent-5.jpg" alt="" class="img-d img-fluid">
+                <img src="img/agent-5.jpg" alt="" class="img-d img-fluid">
               </div>
               <div class="card-overlay card-overlay-hover">
                 <div class="card-header-d">
@@ -763,10 +767,10 @@
           </div>
         </div>
       </div>
-    </section><!-- End Agents Section -->
+    </section> -->
 
-    <!-- ======= Latest News Section ======= -->
-    <section class="section-news section-t8">
+  <!-- ======= Latest News Section ======= -->
+  <!-- <section class="section-news section-t8">
       <div class="container">
         <div class="row">
           <div class="col-md-12">
@@ -786,7 +790,7 @@
           <div class="carousel-item-c">
             <div class="card-box-b card-shadow news-box">
               <div class="img-box-b">
-                <img src="assets/img/post-2.jpg" alt="" class="img-b img-fluid">
+                <img src="img/post-2.jpg" alt="" class="img-b img-fluid">
               </div>
               <div class="card-overlay">
                 <div class="card-header-b">
@@ -809,7 +813,7 @@
           <div class="carousel-item-c">
             <div class="card-box-b card-shadow news-box">
               <div class="img-box-b">
-                <img src="assets/img/post-5.jpg" alt="" class="img-b img-fluid">
+                <img src="img/post-5.jpg" alt="" class="img-b img-fluid">
               </div>
               <div class="card-overlay">
                 <div class="card-header-b">
@@ -832,7 +836,7 @@
           <div class="carousel-item-c">
             <div class="card-box-b card-shadow news-box">
               <div class="img-box-b">
-                <img src="assets/img/post-7.jpg" alt="" class="img-b img-fluid">
+                <img src="img/post-7.jpg" alt="" class="img-b img-fluid">
               </div>
               <div class="card-overlay">
                 <div class="card-header-b">
@@ -855,7 +859,7 @@
           <div class="carousel-item-c">
             <div class="card-box-b card-shadow news-box">
               <div class="img-box-b">
-                <img src="assets/img/post-3.jpg" alt="" class="img-b img-fluid">
+                <img src="img/post-3.jpg" alt="" class="img-b img-fluid">
               </div>
               <div class="card-overlay">
                 <div class="card-header-b">
@@ -877,10 +881,10 @@
           </div>
         </div>
       </div>
-    </section><!-- End Latest News Section -->
+    </section> -->
 
-    <!-- ======= Testimonials Section ======= -->
-    <section class="section-testimonials section-t8 nav-arrow-a">
+  <!-- ======= Testimonials Section ======= -->
+  <!-- <section class="section-testimonials section-t8 nav-arrow-a">
       <div class="container">
         <div class="row">
           <div class="col-md-12">
@@ -897,7 +901,7 @@
               <div class="row">
                 <div class="col-sm-12 col-md-6">
                   <div class="testimonial-img">
-                    <img src="assets/img/testimonial-1.jpg" alt="" class="img-fluid">
+                    <img src="img/testimonial-1.jpg" alt="" class="img-fluid">
                   </div>
                 </div>
                 <div class="col-sm-12 col-md-6">
@@ -912,7 +916,7 @@
                     </p>
                   </div>
                   <div class="testimonial-author-box">
-                    <img src="assets/img/mini-testimonial-1.jpg" alt="" class="testimonial-avatar">
+                    <img src="img/mini-testimonial-1.jpg" alt="" class="testimonial-avatar">
                     <h5 class="testimonial-author">Albert & Erika</h5>
                   </div>
                 </div>
@@ -924,7 +928,7 @@
               <div class="row">
                 <div class="col-sm-12 col-md-6">
                   <div class="testimonial-img">
-                    <img src="assets/img/testimonial-2.jpg" alt="" class="img-fluid">
+                    <img src="img/testimonial-2.jpg" alt="" class="img-fluid">
                   </div>
                 </div>
                 <div class="col-sm-12 col-md-6">
@@ -939,7 +943,7 @@
                     </p>
                   </div>
                   <div class="testimonial-author-box">
-                    <img src="assets/img/mini-testimonial-2.jpg" alt="" class="testimonial-avatar">
+                    <img src="img/mini-testimonial-2.jpg" alt="" class="testimonial-avatar">
                     <h5 class="testimonial-author">Pablo & Emma</h5>
                   </div>
                 </div>
@@ -948,9 +952,9 @@
           </div>
         </div>
       </div>
-    </section><!-- End Testimonials Section -->
+    </section> -->
 
-  </main><!-- End #main -->
+  <!-- </main> -->
 
   <!-- ======= Footer ======= -->
   <section class="section-footer">
@@ -959,7 +963,7 @@
         <div class="col-sm-12 col-md-4">
           <div class="widget-a">
             <div class="w-header-a">
-              <h3 class="w-title-a text-brand">EstateAgency</h3>
+              <h3 class="w-title-a text-brand">HomeLand</h3>
             </div>
             <div class="w-body-a">
               <p class="w-text-a color-text-a">
@@ -1097,7 +1101,7 @@
           <div class="copyright-footer">
             <p class="copyright color-text-a">
               &copy; Copyright
-              <span class="color-a">EstateAgency</span> All Rights Reserved.
+              <span class="color-a">HomeLand</span> All Rights Reserved.
             </p>
           </div>
           <div class="credits">
@@ -1107,7 +1111,7 @@
             Licensing information: https://bootstrapmade.com/license/
             Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=EstateAgency
           -->
-            Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+            <a href="https://bootstrapmade.com/"></a>
           </div>
         </div>
       </div>
@@ -1118,15 +1122,15 @@
   <div id="preloader"></div>
 
   <!-- Vendor JS Files -->
-  <script src="assets/vendor/jquery/jquery.min.js"></script>
-  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/vendor/jquery.easing/jquery.easing.min.js"></script>
-  <script src="assets/vendor/php-email-form/validate.js"></script>
-  <script src="assets/vendor/owl.carousel/owl.carousel.min.js"></script>
-  <script src="assets/vendor/scrollreveal/scrollreveal.min.js"></script>
+  <script src="vendor/jquery/jquery.min.js"></script>
+  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="vendor/jquery.easing/jquery.easing.min.js"></script>
+  <script src="vendor/php-email-form/validate.js"></script>
+  <script src="vendor/owl.carousel/owl.carousel.min.js"></script>
+  <script src="vendor/scrollreveal/scrollreveal.min.js"></script>
 
   <!-- Template Main JS File -->
-  <script src="assets/js/main.js"></script>
+  <script src="js/main.js"></script>
 
 </body>
 
