changed color scheme

--- a/index.html
+++ b/index.html
@@ -23,8 +23,10 @@
   <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet">
   <link href="vendor/owl.carousel/owl.carousel.min.css" rel="stylesheet">
 
+
   <!-- Template Main CSS File -->
   <link href="css/style.css" rel="stylesheet">
+  <link href="css\index.css" rel="stylesheet">
 
   <!-- =======================================================
   * Template Name: EstateAgency - v2.2.1
@@ -37,8 +39,7 @@
 <body>
 
   <!-- ======= Property Search Section ======= -->
-  <div class="click-closed"></div>
-  <!--/ Form Search Star /-->
+  <!-- <div class="click-closed"></div>
   <div class="box-collapse">
     <div class="title-box-d">
       <h3 class="title-d">Search Property</h3>
@@ -128,9 +129,10 @@
         </div>
       </form>
     </div>
-  </div><!-- End Property Search Section -->>
+  </div> -->
 
   <!-- ======= Header/Navbar ======= -->
+
   <nav class="navbar navbar-default navbar-trans navbar-expand-lg fixed-top">
     <div class="container">
       <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarDefault"
@@ -150,13 +152,13 @@
             <a class="nav-link active" href="index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="about.html">About</a>
+            <a class="nav-link" href="about.html">Buy</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="property-grid.html">Property</a>
+            <a class="nav-link" href="property-grid.html">Rent</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="blog-grid.html">Blog</a>
+            <a class="nav-link" href="blog-grid.html">About</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
@@ -180,7 +182,70 @@
         <span class="fa fa-search" aria-hidden="true"></span>
       </button>
     </div>
-  </nav><!-- End Header/Navbar -->
+  </nav>
+  <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vel quisquam excepturi placeat molestiae, vero deserunt
+    amet doloribus nulla, blanditiis obcaecati, ratione maxime aperiam repellendus et harum eveniet tenetur temporibus
+    beatae.
+    Asperiores adipisci alias, sed quas et quibusdam deserunt assumenda soluta, explicabo quo incidunt natus quia, id
+    accusamus ullam autem consequuntur voluptates repellendus ex sequi perferendis quae ipsum! Nam, rem quisquam?
+    Similique, a. Tempora numquam, ex libero id eligendi repudiandae optio culpa, modi nisi rem sunt autem in, quos
+    pariatur et amet placeat facere quas beatae sequi expedita repellendus odit. Obcaecati.
+    Dolorum rerum explicabo quae eos, omnis minus quasi fugiat cumque quisquam, ab ratione neque sed quibusdam inventore
+    nesciunt cupiditate iusto temporibus molestias alias, incidunt assumenda consectetur. Suscipit quod iusto nulla!
+    Itaque, pariatur fugit! Ducimus voluptates delectus, ea alias laborum voluptate sapiente nam? Assumenda, quisquam
+    reprehenderit explicabo accusamus quo id repudiandae impedit delectus suscipit optio, dolor nesciunt corporis, amet
+    nulla autem!
+    Sunt ratione commodi exercitationem incidunt magnam consequuntur iure voluptatum, enim sequi rerum blanditiis
+    necessitatibus culpa quidem autem consequatur quis nam. Corrupti ipsa dolor incidunt cum magnam, sed placeat rerum
+    deserunt!
+    Asperiores, dolorem amet suscipit repellendus incidunt dolore praesentium maxime esse eaque vel nam corporis dicta
+    ipsum vitae consequuntur veritatis voluptatibus, et doloremque eveniet veniam. Ad esse deleniti ipsam praesentium
+    modi.
+    Odit neque perferendis maiores dolor labore blanditiis magni, iure non optio! Consequuntur accusantium cupiditate
+    voluptate dolores error animi, iste molestias, nemo modi nobis possimus est quibusdam ab quia iure assumenda!
+    Et ducimus fuga nihil, porro aspernatur repellat, facilis aliquam optio odio nemo labore nulla vero recusandae,
+    accusamus assumenda? Laboriosam deserunt repudiandae cum possimus in recusandae optio. Veritatis dolore atque
+    magnam!
+    Neque sit, repudiandae rem dignissimos ratione beatae quo sapiente nostrum, id eos culpa iste ullam officia, eius
+    ipsum adipisci! A ab vel magnam. Distinctio quisquam odit ipsa esse sed reiciendis.
+    Corporis incidunt dicta molestiae quisquam suscipit explicabo debitis ipsa, quo illo ratione veritatis repellat
+    eaque ad nesciunt ea consequatur temporibus eligendi accusamus maxime vel exercitationem perferendis aliquid amet.
+    Maxime, iure!
+    Ex voluptas quos, officia ad odio temporibus ipsam rerum quas iusto, quidem amet optio velit omnis hic quod ipsum
+    qui corrupti neque enim ratione facilis! Molestiae natus consequatur modi culpa!
+    Rem porro at voluptas impedit, hic sit distinctio nostrum veniam explicabo tempore delectus ex nisi dolores rerum
+    recusandae neque inventore, quod, officia in itaque corrupti. Non vel quis sint unde.
+    Eligendi dolores esse, quibusdam deleniti labore officiis eius ex nesciunt placeat quasi optio itaque cupiditate
+    assumenda ipsa quam, illum tenetur, exercitationem voluptatibus a voluptate eaque. Iste sunt magni exercitationem
+    quos.
+    Incidunt quod harum labore rerum temporibus, fuga maxime, impedit sint eius eum unde placeat quidem dolor quibusdam
+    nemo animi voluptates quos. Explicabo eos, quod perferendis quae tempora neque sit soluta.
+    Vitae numquam quo, totam exercitationem blanditiis in cumque amet soluta libero. Assumenda, commodi error placeat
+    ipsam expedita doloremque quas velit harum tempora consectetur possimus illo quisquam fugit aliquam beatae ipsa!
+    Nostrum exercitationem facere voluptas impedit cumque praesentium dolore iure quis accusamus iusto nemo nulla, illo
+    numquam quos iste hic! Provident corrupti voluptas maxime quibusdam quidem reprehenderit cum, hic sapiente vero?
+    Aspernatur, aperiam magnam, at iusto incidunt corrupti et voluptas quibusdam possimus molestias tempora impedit
+    tempore quaerat quidem fuga sunt magni maiores ipsam. Maiores hic, deleniti ut quaerat minus ab. Alias.
+    Error id ipsum reprehenderit est, reiciendis qui officia sequi ad dolorem, voluptas nemo odio accusantium labore eum
+    iste alias possimus nostrum soluta a sit maxime eos natus? Iure, qui autem.
+    Nulla nam obcaecati labore praesentium expedita numquam voluptates quas blanditiis cum, modi nostrum enim incidunt
+    quidem quisquam ipsum illum molestias id qui eos deserunt debitis cumque eaque saepe. Eum, laborum.
+    Amet dolor quo libero officiis qui asperiores. Dignissimos, nostrum omnis impedit tempore id voluptatibus adipisci
+    alias animi dolor odio ad repudiandae aliquid explicabo repellendus voluptate sint ratione voluptatem quibusdam?
+    Odit.
+    Ex deserunt repellendus voluptatum tenetur quibusdam architecto exercitationem dignissimos, fuga, delectus doloribus
+    repellat velit odio quod omnis magni officia, a non vitae nesciunt qui impedit? Ducimus itaque ullam cupiditate!
+    Rem.
+    Suscipit vero aliquam commodi deserunt sit quis pariatur repellendus porro ad ipsa animi minus laudantium fuga cum
+    harum autem, a nulla quibusdam veritatis placeat natus exercitationem! Veniam rerum sunt minima.
+    Labore necessitatibus hic beatae fuga, reprehenderit architecto dolores odit iste quaerat. Dolor quos optio
+    quibusdam, eligendi neque molestiae cupiditate placeat repellat reiciendis repudiandae? Quas accusantium laborum
+    quidem ducimus alias nostrum.
+    Provident assumenda delectus obcaecati velit sapiente, aut possimus tempora praesentium officiis distinctio animi
+    fugiat, deserunt, odio perferendis iusto omnis dolore cumque. Numquam eum, expedita nemo assumenda necessitatibus
+    quibusdam optio accusantium!</p>
+
+
 
   <!-- ======= Intro Section ======= -->
   <!-- <div class="intro intro-carousel">
@@ -957,7 +1022,7 @@
   <!-- </main> -->
 
   <!-- ======= Footer ======= -->
-  <section class="section-footer">
+  <!-- <section class="section-footer">
     <div class="container">
       <div class="row">
         <div class="col-sm-12 col-md-4">
@@ -1045,7 +1110,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
   <footer>
     <div class="container">
       <div class="row">
