--- a/buy.html
+++ b/buy.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Housing.com</title>
+    <title>HomeLand</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
 
