--- a/index.html
+++ b/index.html
@@ -144,18 +144,6 @@
         <a id="signin" class="nav-item nav-link top_nav_link" href="#">Sign in</a>
         <a class="nav-item nav-link btn  mr-0 top_nav_link" href="signup.html">Sign up</a>
       </div>
-      <!-- <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-              aria-haspopup="true" aria-expanded="false">
-              Pages
-            </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="property-single.html">Property Single</a>
-              <a class="dropdown-item" href="blog-single.html">Blog Single</a>
-              <a class="dropdown-item" href="agents-grid.html">Agents Grid</a>
-              <a class="dropdown-item" href="agent-single.html">Agent Single</a>
-            </div>
-          </li> -->
     </div>
     <div class="container-fluid nav_bottom" id="nav_bottom">
       <a style="margin-right: 0%;" class="navbar-brand" href="img\Logo.png"><img id="logo2" src="img\Logo.png"
@@ -194,7 +182,7 @@
           <div class="dropdowdn">
             <button class="btn dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown"
               aria-haspopup="true" aria-expanded="false">
-              <i class="fa fa-user-circle-o" aria-hidden="true"></i></button>
+              <i class="fas fa-user-circle"></i></button>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
               <a href="#" class="dropdown-item">Sign Up</a>
               <a href="#" class="dropdown-item">Sign in</a>
@@ -236,6 +224,128 @@
 
   <section class="container-fluid">
     <h1>Featured Properties</h1>
+    <div class="row">
+      <div class="col-sm-4">
+        <div class="card card-primary">
+          <div class="card-header">
+            <img src="img/property-1.jpg" class="img-responsive title-image" alt="Image">
+            <H6 class="card-title">3BHK Independent House</H6>
+          </div>
+          <div class="card-body">
+            <div class="property-location">
+              <i class="fas fa-map-marker-alt" aria-hidden="true"></i>
+              Airoli / Navi Mumbai
+            </div>
+            <div class="property-price">
+              <i class="fas fa-rupee-sign"></i>
+              22,000,00.00
+            </div>
+            <div class="property-info">
+              <ul class="row">
+                <li class="col-4 bedroom">
+                  <img src="img/bedroom_icon.png" alt="bed">
+                  <p>Bedrooms <span class="number">2</span></p>
+                </li>
+                <li class="col-4 bathroom">
+                  <img src="img/bathroom_icon.png" alt="bath">
+                  <p>Bathrooms <span class="number">2</span></p>
+                </li>
+                <li class="col-4 parking">
+                  <img src="img/parking_icon.png" alt="parking">
+                  <p>Parking <span class="number">1</span></p>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="card-footer property-type">
+            <div class="type1">Independent</div>
+            <button class="type2">
+              <p class="mb-0">For <span>Sale</span></p>
+            </button>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-4">
+        <div class="card card-primary">
+          <div class="card-header">
+            <img src="img/property-1.jpg" class="img-responsive title-image" alt="Image">
+            <H6 class="card-title">3BHK Independent House</H6>
+          </div>
+          <div class="card-body">
+            <div class="property-location">
+              <i class="fas fa-map-marker-alt" aria-hidden="true"></i>
+              Airoli / Navi Mumbai
+            </div>
+            <div class="property-price">
+              <i class="fas fa-rupee-sign"></i>
+              22,000,00.00
+            </div>
+            <div class="property-info">
+              <ul class="row">
+                <li class="col-4 bedroom">
+                  <img src="img/bedroom_icon.png" alt="bed">
+                  <p>Bedrooms <span class="number">2</span></p>
+                </li>
+                <li class="col-4 bathroom">
+                  <img src="img/bathroom_icon.png" alt="bath">
+                  <p>Bathrooms <span class="number">2</span></p>
+                </li>
+                <li class="col-4 parking">
+                  <img src="img/parking_icon.png" alt="parking">
+                  <p>Parking <span class="number">1</span></p>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="card-footer property-type">
+            <div class="type1">Independent</div>
+            <button class="type2">
+              <p class="mb-0">For <span>Sale</span></p>
+            </button>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-4">
+        <div class="card card-primary">
+          <div class="card-header">
+            <img src="img/property-1.jpg" class="img-responsive title-image" alt="Image">
+            <H6 class="card-title">3BHK Independent House</H6>
+          </div>
+          <div class="card-body">
+            <div class="property-location">
+              <i class="fas fa-map-marker-alt" aria-hidden="true"></i>
+              Airoli / Navi Mumbai
+            </div>
+            <div class="property-price">
+              <i class="fas fa-rupee-sign"></i>
+              22,000,00.00
+            </div>
+            <div class="property-info">
+              <ul class="row">
+                <li class="col-4 bedroom">
+                  <img src="img/bedroom_icon.png" alt="bed">
+                  <p>Bedrooms <span class="number">2</span></p>
+                </li>
+                <li class="col-4 bathroom">
+                  <img src="img/bathroom_icon.png" alt="bath">
+                  <p>Bathrooms <span class="number">2</span></p>
+                </li>
+                <li class="col-4 parking">
+                  <img src="img/parking_icon.png" alt="parking">
+                  <p>Parking <span class="number">1</span></p>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="card-footer property-type">
+            <div class="type1">Independent</div>
+            <button class="type2">
+              <p class="mb-0">For <span>Sale</span></p>
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
     <div class="row">
       <div class="col-sm-4">
         <div class="card card-primary">
