--- a/buy.html
+++ b/buy.html
@@ -92,7 +92,7 @@
                     <div class="dropdowdn">
                         <button class="btn dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown"
                             aria-haspopup="true" aria-expanded="false">
-                            <i class="fa fa-user-circle-o" aria-hidden="true"></i></button>
+                            <i class="fas fa-user-circle"></i></button>
                         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
                             <a href="#" class="dropdown-item">Sign Up</a>
                             <a href="#" class="dropdown-item">Sign in</a>
