--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
   <link href="assets/vendor/owl.carousel/assets/owl.carousel.min.css" rel="stylesheet">
 
   <!-- Template Main CSS File -->
-  <link href="assets/css/style.css" rel="stylesheet">
+  <link href="assets\css\style.css" rel="stylesheet">
 
   <!-- =======================================================
   * Template Name: EstateAgency - v2.2.1
