popup form and about us changed

--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>EstateAgency Bootstrap Template - Index</title>
+  <title>HomeLand</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -36,11 +36,7 @@
 
       <a class="navbar-brand text-brand" href="index.html" style="margin-left: 3rem; margin-top: 2rem;"><img id="logo"
           src="./img/Logo.png" alt="Logo">Home<span class="color-b">Land</span></a>
-      <div class="navbar-nav align-items-center ml-auto" style="align-items: flex-end;">
-        <a class="nav-item nav-link top_nav_link" href="#">Post Property</a>
-        <a id="signin" class="nav-item nav-link top_nav_link" href="#">Sign in</a>
-        <a class="nav-item nav-link btn  mr-0 top_nav_link" href="signup.html">Sign up</a>
-      </div>
+      
       <!-- <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
               aria-haspopup="true" aria-expanded="false">
@@ -80,7 +76,7 @@
             <a class="nav-link" href="property-grid.html">Rent</a>
           </div>
           <div class="nav-item">
-            <a class="nav-link" href="#">About</a>
+            <a class="nav-link" href="about-us.html">About</a>
           </div>
           <div class="nav-item">
             <a class="nav-link" href="contact.html">Contact</a>
@@ -112,10 +108,8 @@
           <div class="col-md-12 col-lg-8">
             <div class="title-single-box">
               <h1 class="title-single">Contact US</h1>
-              <span class="color-text-a">Aut voluptas consequatur unde sed omnis ex placeat quis eos. Aut natus officia
-                corrupti qui autem fugit consectetur quo. Et ipsum eveniet laboriosam voluptas beatae possimus qui
-                ducimus. Et voluptatem deleniti. Voluptatum voluptatibus amet. Et esse sed omnis inventore hic
-                culpa.</span>
+              <span class="color-text-a">Our project <b> HOMELAND </b> is related to online application of estate We propose to build a real estate portal that allows users to post property for sale as well as search sort property and contact its owner online.
+                It also consists of an innovative feature that allows users to post reviews of the dealing process with a buyer after their deal.</span>
             </div>
           </div>
           <div class="col-md-12 col-lg-4">
